tests/testdata/negative/struct_undef_type.go
package main
func main() {
  p := Ghost{x: 1};
  fmt.Println(p.x);
}
